Updates from Overleaf

--- a/slides.tex
+++ b/slides.tex
@@ -419,7 +419,24 @@
 % -------------------------------------------------------------------------------
 \begin{frame}
 	\frametitle{Binary Arrays: A bridge between SNA and Phylogenetics}
-	TBD
+	
+	\begin{minipage}[c]{.49\linewidth}
+	\begin{figure}
+	    \centering
+	    \includegraphics[width=.7\linewidth]{fig/adjmat-network.png}
+	    \caption{Caption}
+        \label{fig:my_label}
+	\end{figure}    
+	\end{minipage}\hfill
+	\begin{minipage}[c]{.49\linewidth}
+	\begin{figure}
+	    \centering
+	    \includegraphics[width=.7\linewidth]{fig/adjmat-aphylo.png}
+	    \caption{Caption}
+        \label{fig:my_label}
+	\end{figure}    
+	\end{minipage}
+	
 \end{frame}
 
 \begin{frame}
